# restapi/operations/hire_a_drone_api.go
@@ -60,20 +60,20 @@ func NewHireADroneAPI(spec *loads.Document) *HireADroneAPI {
 			return middleware.NotImplemented("operation PilotsUpdateOne has not yet been implemented")
 		}),
 
-		GoogleJwtAuth: func(token string, scopes []string) (interface{}, error) {
-			return nil, errors.NotImplemented("oauth2 bearer auth (google_jwt) has not yet been implemented")
-		},
-
 		GoogleIDTokenAuth: func(token string, scopes []string) (interface{}, error) {
 			return nil, errors.NotImplemented("oauth2 bearer auth (google_id_token) has not yet been implemented")
 		},
 
-		FirebaseAuth: func(token string, scopes []string) (interface{}, error) {
-			return nil, errors.NotImplemented("oauth2 bearer auth (firebase) has not yet been implemented")
+		GoogleJwtAuth: func(token string, scopes []string) (interface{}, error) {
+			return nil, errors.NotImplemented("oauth2 bearer auth (google_jwt) has not yet been implemented")
 		},
 
 		Auth0JwkAuth: func(token string, scopes []string) (interface{}, error) {
 			return nil, errors.NotImplemented("oauth2 bearer auth (auth0_jwk) has not yet been implemented")
+		},
+
+		FirebaseAuth: func(token string, scopes []string) (interface{}, error) {
+			return nil, errors.NotImplemented("oauth2 bearer auth (firebase) has not yet been implemented")
 		},
 
 		// Applies when the "key" query is set
@@ -98,21 +98,21 @@ type HireADroneAPI struct {
 	// JSONProducer registers a producer for a "application/json" mime type
 	JSONProducer runtime.Producer
 
-	// GoogleJwtAuth registers a function that takes an access token and a collection of required scopes and returns a principal
-	// it performs authentication based on an oauth2 bearer token provided in the request
-	GoogleJwtAuth func(string, []string) (interface{}, error)
-
 	// GoogleIDTokenAuth registers a function that takes an access token and a collection of required scopes and returns a principal
 	// it performs authentication based on an oauth2 bearer token provided in the request
 	GoogleIDTokenAuth func(string, []string) (interface{}, error)
 
-	// FirebaseAuth registers a function that takes an access token and a collection of required scopes and returns a principal
+	// GoogleJwtAuth registers a function that takes an access token and a collection of required scopes and returns a principal
 	// it performs authentication based on an oauth2 bearer token provided in the request
-	FirebaseAuth func(string, []string) (interface{}, error)
+	GoogleJwtAuth func(string, []string) (interface{}, error)
 
 	// Auth0JwkAuth registers a function that takes an access token and a collection of required scopes and returns a principal
 	// it performs authentication based on an oauth2 bearer token provided in the request
 	Auth0JwkAuth func(string, []string) (interface{}, error)
+
+	// FirebaseAuth registers a function that takes an access token and a collection of required scopes and returns a principal
+	// it performs authentication based on an oauth2 bearer token provided in the request
+	FirebaseAuth func(string, []string) (interface{}, error)
 
 	// APIKeyAuth registers a function that takes a token and returns a principal
 	// it performs authentication based on an api key key provided in the query
@@ -199,20 +199,20 @@ func (o *HireADroneAPI) Validate() error {
 		unregistered = append(unregistered, "JSONProducer")
 	}
 
-	if o.GoogleJwtAuth == nil {
-		unregistered = append(unregistered, "GoogleJwtAuth")
-	}
-
 	if o.GoogleIDTokenAuth == nil {
 		unregistered = append(unregistered, "GoogleIDTokenAuth")
 	}
 
-	if o.FirebaseAuth == nil {
-		unregistered = append(unregistered, "FirebaseAuth")
+	if o.GoogleJwtAuth == nil {
+		unregistered = append(unregistered, "GoogleJwtAuth")
 	}
 
 	if o.Auth0JwkAuth == nil {
 		unregistered = append(unregistered, "Auth0JwkAuth")
+	}
+
+	if o.FirebaseAuth == nil {
+		unregistered = append(unregistered, "FirebaseAuth")
 	}
 
 	if o.APIKeyAuth == nil {
@@ -274,21 +274,21 @@ func (o *HireADroneAPI) AuthenticatorsFor(schemes map[string]spec.SecurityScheme
 	for name, scheme := range schemes {
 		switch name {
 
-		case "google_jwt":
-
-			result[name] = security.BearerAuth(scheme.Name, o.GoogleJwtAuth)
-
 		case "google_id_token":
 
 			result[name] = security.BearerAuth(scheme.Name, o.GoogleIDTokenAuth)
 
-		case "firebase":
+		case "google_jwt":
 
-			result[name] = security.BearerAuth(scheme.Name, o.FirebaseAuth)
+			result[name] = security.BearerAuth(scheme.Name, o.GoogleJwtAuth)
 
 		case "auth0_jwk":
 
 			result[name] = security.BearerAuth(scheme.Name, o.Auth0JwkAuth)
+
+		case "firebase":
+
+			result[name] = security.BearerAuth(scheme.Name, o.FirebaseAuth)
 
 		case "api_key":
 
@@ -341,6 +341,9 @@ func (o *HireADroneAPI) HandlerFor(method, path string) (http.Handler, bool) {
 	if _, ok := o.handlers[um]; !ok {
 		return nil, false
 	}
+	if path == "/" {
+		path = ""
+	}
 	h, ok := o.handlers[um][path]
 	return h, ok
 }
@@ -364,7 +367,7 @@ func (o *HireADroneAPI) initHandlerCache() {
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
-	o.handlers["POST"][""] = pilots.NewAddOne(o.context, o.PilotsAddOneHandler)
+	o.handlers["POST"]["/pilot"] = pilots.NewAddOne(o.context, o.PilotsAddOneHandler)
 
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
@@ -389,7 +392,7 @@ func (o *HireADroneAPI) initHandlerCache() {
 	if o.handlers["DELETE"] == nil {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
-	o.handlers["DELETE"]["/{id}"] = pilots.NewDestroyOne(o.context, o.PilotsDestroyOneHandler)
+	o.handlers["DELETE"]["/pilot/{id}"] = pilots.NewDestroyOne(o.context, o.PilotsDestroyOneHandler)
 
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
@@ -399,12 +402,12 @@ func (o *HireADroneAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"][""] = pilots.NewFindPilots(o.context, o.PilotsFindPilotsHandler)
+	o.handlers["GET"]["/pilot"] = pilots.NewFindPilots(o.context, o.PilotsFindPilotsHandler)
 
 	if o.handlers["PUT"] == nil {
 		o.handlers["PUT"] = make(map[string]http.Handler)
 	}
-	o.handlers["PUT"]["/{id}"] = pilots.NewUpdateOne(o.context, o.PilotsUpdateOneHandler)
+	o.handlers["PUT"]["/pilot/{id}"] = pilots.NewUpdateOne(o.context, o.PilotsUpdateOneHandler)
 
 }
 
